--- a/lib/recommender_system/recommender.ipynb
+++ b/lib/recommender_system/recommender.ipynb
@@ -36,9 +36,7 @@
     "# from sklearn.metrics.pairwise import cosine_similarity\n",
     "# from scipy.sparse.linalg import svds\n",
     "# from sklearn.preprocessing import MinMaxScaler\n",
-    "# from tensorflow.compat.v1 import metrics\n",
-    "\n",
-    "# tf.compat.v1.disable_eager_execution()"
+    "# from tensorflow.compat.v1 import metrics\n"
    ]
   },
   {
@@ -151,7 +149,9 @@
    ],
    "source": [
     "# Toys Section Importing From amazon_us_reviews dataset\n",
-    "tools = tfds.load(\"amazon_us_reviews/Tools_v1_00\", split='train')\n",
+    "tools = (tfds.load(\"amazon_us_reviews/Tools_v1_00\", split='train')\n",
+    "            # Cache for efficiency.\n",
+    "            .cache(tempfile.NamedTemporaryFile().name))\n",
     "\n",
     "for x in tools.take(1).as_numpy_iterator():\n",
     "    pprint.pprint(x)"
@@ -180,11 +180,10 @@
     "toolsProcessed = tools1.map(lambda x: {\n",
     "    \"customer_id\": x[\"customer_id\"],\n",
     "    \"product_title\": x[\"product_title\"],\n",
-    "    \"product_id\": x[\"product_id\"],\n",
     "})\n",
     "\n",
     "tf.random.set_seed(1)\n",
-    "shuffledTools = toolsProcessed.shuffle(100_000, reshuffle_each_iteration=False)"
+    "shuffledTools = toolsProcessed.shuffle(10_000, seed=1, reshuffle_each_iteration=False)"
    ]
   },
   {
@@ -200,8 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainNum = 80_000\n",
-    "testNum = 20_000\n",
+    "trainNum = 8_000\n",
+    "testNum = 2_000\n",
     "\n",
     "train = shuffledTools.take(trainNum)\n",
     "# for x,y,z in train:\n",
@@ -219,23 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customerID = (toolsProcessed.batch(100_000)\n",
+    "customerID = (toolsProcessed\n",
     "              # Retain only the fields we need.\n",
     "              .map(lambda x: x[\"customer_id\"])\n",
-    "              # Cache for efficiency.\n",
-    "              .cache(tempfile.NamedTemporaryFile().name)\n",
     "              )\n",
-    "product = (toolsProcessed.batch(100_000)\n",
+    "product = (toolsProcessed\n",
     "           .map(lambda x: x[\"product_title\"])\n",
-    "           .cache(tempfile.NamedTemporaryFile().name)\n",
     "           )\n",
     "\n",
-    "uniqueCustomerID = np.unique(np.concatenate(list(customerID)))\n",
-    "uniqueProduct = np.unique(np.concatenate(list(product)))\n"
+    "uniqueCustomerID = np.unique(np.concatenate(list(customerID.batch(1_000))))\n",
+    "uniqueProduct = np.unique(np.concatenate(list(product.batch(1_000))))\n"
    ]
   },
   {
@@ -247,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,14 +278,14 @@
     "\n",
     "    def compute_loss(self, features: Dict[Text, tf.Tensor], training=False) -> tf.Tensor:\n",
     "            customerEmbeddings = self.customer_model(features[\"customer_id\"])\n",
-    "            productEmbeddings = self.product_model(features[\"product_id\"])\n",
+    "            productEmbeddings = self.product_model(features[\"product_title\"])\n",
     "\n",
     "            return self.task(customerEmbeddings, productEmbeddings, compute_metrics=not training)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,58 +296,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Fitting and Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, None) for input KerasTensor(type_spec=TensorSpec(shape=(None, None), dtype=tf.string, name='string_lookup_3_input'), name='string_lookup_3_input', description=\"created by layer 'string_lookup_3_input'\"), but it was called on an input with incompatible shape (None,).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, None) for input KerasTensor(type_spec=TensorSpec(shape=(None, None), dtype=tf.string, name='string_lookup_3_input'), name='string_lookup_3_input', description=\"created by layer 'string_lookup_3_input'\"), but it was called on an input with incompatible shape (None,).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, None) for input KerasTensor(type_spec=TensorSpec(shape=(None, None), dtype=tf.string, name='string_lookup_3_input'), name='string_lookup_3_input', description=\"created by layer 'string_lookup_3_input'\"), but it was called on an input with incompatible shape (None,).\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, None) for input KerasTensor(type_spec=TensorSpec(shape=(None, None), dtype=tf.string, name='string_lookup_3_input'), name='string_lookup_3_input', description=\"created by layer 'string_lookup_3_input'\"), but it was called on an input with incompatible shape (None,).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10/10 [==============================] - 12s 583ms/step - factorized_top_k/top_1_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_5_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_10_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_50_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_100_categorical_accuracy: 0.0000e+00 - loss: 70367.2294 - regularization_loss: 0.0000e+00 - total_loss: 70367.2294\n"
+      "10/10 [==============================] - 4s 182ms/step - factorized_top_k/top_1_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_5_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_10_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_50_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_100_categorical_accuracy: 0.0000e+00 - loss: 70367.1918 - regularization_loss: 0.0000e+00 - total_loss: 70367.1918\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1eb716f1f10>"
+       "<keras.callbacks.History at 0x21881293970>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(train.batch(8192), epochs=1)"
+    "cachedTrain = train.shuffle(1_000).batch(8192).cache()\n",
+    "cachedTest = test.batch(4096).cache()\n",
+    "\n",
+    "model.fit(cachedTrain, epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/3 [==============================] - 597s 173s/step - factorized_top_k/top_1_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_5_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_10_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_50_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_100_categorical_accuracy: 7.0000e-04 - loss: 51722.3945 - regularization_loss: 0.0000e+00 - total_loss: 51722.3945\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'factorized_top_k/top_1_categorical_accuracy': 0.000699999975040555,\n",
+       " 'factorized_top_k/top_5_categorical_accuracy': 0.000699999975040555,\n",
+       " 'factorized_top_k/top_10_categorical_accuracy': 0.000699999975040555,\n",
+       " 'factorized_top_k/top_50_categorical_accuracy': 0.000699999975040555,\n",
+       " 'factorized_top_k/top_100_categorical_accuracy': 0.000699999975040555,\n",
+       " 'loss': 29627.015625,\n",
+       " 'regularization_loss': 0,\n",
+       " 'total_loss': 29627.015625}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(test.batch(8192), return_dict=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approximate Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brute_force = tfrs.layers.factorized_top_k.BruteForce(model.user_model)\n",
+    "brute_force.index_from_dataset(\n",
+    "    toolsProcessed.batch(128).map(lambda title: (title, model.movie_model(title)))\n",
+    ")"
    ]
   },
   {
@@ -436,7 +467,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16116/1644721066.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m.10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.04\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.05\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.01\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mrec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecall_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mprec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecision_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25568/1644721066.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m.10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.04\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.05\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.01\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mrec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecall_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mprec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecision_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tensorflow\\python\\ops\\metrics_impl.py\u001b[0m in \u001b[0;36mrecall_at_k\u001b[1;34m(labels, predictions, k, class_id, weights, metrics_collections, updates_collections, name)\u001b[0m\n\u001b[0;32m   2653\u001b[0m   \"\"\"\n\u001b[0;32m   2654\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecuting_eagerly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2655\u001b[1;33m     raise RuntimeError('tf.metrics.recall_at_k is not '\n\u001b[0m\u001b[0;32m   2656\u001b[0m                        'supported when eager execution is enabled.')\n\u001b[0;32m   2657\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mRuntimeError\u001b[0m: tf.metrics.recall_at_k is not supported when eager execution is enabled."
      ]
@@ -464,8 +495,7 @@
     "avg_prec = tf.compat.v1.metrics.average_precision_at_k(labels, predictions, k)\n",
     "with tf.compat.v1.Session() as sess:\n",
     "    sess.run([tf.compat.v1.local_variables_initializer(), tf.compat.v1.global_variables_initializer()])\n",
-    "    print('{:.4f}'.format(sess.run(avg_prec[1])))\n",
-    "        "
+    "    print('{:.4f}'.format(sess.run(avg_prec[1])))"
    ]
   }
  ],
