--- a/lib/recommender_system/recommender.ipynb
+++ b/lib/recommender_system/recommender.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "# import sklearn\n",
     "import tensorflow as tf\n",
     "# from sklearn.model_selection import train_test_split\n",
+    "\n",
     "# from nltk.corpus import stopwords\n",
     "import numpy as np\n",
     "import tensorflow_datasets as tfds\n",
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +181,7 @@
     "toolsProcessed = tools1.map(lambda x: {\n",
     "    \"customer_id\": x[\"customer_id\"],\n",
     "    \"product_title\": x[\"product_title\"],\n",
+    "    \"star_rating\": x[\"star_rating\"]\n",
     "})\n",
     "\n",
     "tf.random.set_seed(1)\n",
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +228,7 @@
     "              # Retain only the fields we need.\n",
     "              .map(lambda x: x[\"customer_id\"])\n",
     "              )\n",
-    "product = (toolsProcessed\n",
+    "product = (toolsProcessed \n",
     "           .map(lambda x: x[\"product_title\"])\n",
     "           )\n",
     "\n",
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,73 +306,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/10 [==============================] - 4s 182ms/step - factorized_top_k/top_1_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_5_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_10_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_50_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_100_categorical_accuracy: 0.0000e+00 - loss: 70367.1918 - regularization_loss: 0.0000e+00 - total_loss: 70367.1918\n"
+      "Epoch 1/3\n",
+      "1/1 [==============================] - 7s 7s/step - factorized_top_k/top_1_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_5_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_10_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_50_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_100_categorical_accuracy: 0.0000e+00 - loss: 71897.9453 - regularization_loss: 0.0000e+00 - total_loss: 71897.9453\n",
+      "Epoch 2/3\n",
+      "1/1 [==============================] - 0s 273ms/step - factorized_top_k/top_1_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_5_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_10_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_50_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_100_categorical_accuracy: 0.0000e+00 - loss: 71765.5625 - regularization_loss: 0.0000e+00 - total_loss: 71765.5625\n",
+      "Epoch 3/3\n",
+      "1/1 [==============================] - 0s 294ms/step - factorized_top_k/top_1_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_5_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_10_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_50_categorical_accuracy: 0.0000e+00 - factorized_top_k/top_100_categorical_accuracy: 0.0000e+00 - loss: 71578.5234 - regularization_loss: 0.0000e+00 - total_loss: 71578.5234\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x21881293970>"
+       "<keras.callbacks.History at 0x1d54de16460>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cachedTrain = train.shuffle(1_000).batch(8192).cache()\n",
+    "cachedTrain = train.shuffle(10_000).batch(8192).cache()\n",
     "cachedTest = test.batch(4096).cache()\n",
     "\n",
-    "model.fit(cachedTrain, epochs=1)"
+    "model.fit(cachedTrain, epochs=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3/3 [==============================] - 597s 173s/step - factorized_top_k/top_1_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_5_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_10_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_50_categorical_accuracy: 7.0000e-04 - factorized_top_k/top_100_categorical_accuracy: 7.0000e-04 - loss: 51722.3945 - regularization_loss: 0.0000e+00 - total_loss: 51722.3945\n"
+      "1/1 [==============================] - 207s 207s/step - factorized_top_k/top_1_categorical_accuracy: 5.0000e-04 - factorized_top_k/top_5_categorical_accuracy: 5.0000e-04 - factorized_top_k/top_10_categorical_accuracy: 5.0000e-04 - factorized_top_k/top_50_categorical_accuracy: 5.0000e-04 - factorized_top_k/top_100_categorical_accuracy: 5.0000e-04 - loss: 15201.9600 - regularization_loss: 0.0000e+00 - total_loss: 15201.9600\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'factorized_top_k/top_1_categorical_accuracy': 0.000699999975040555,\n",
-       " 'factorized_top_k/top_5_categorical_accuracy': 0.000699999975040555,\n",
-       " 'factorized_top_k/top_10_categorical_accuracy': 0.000699999975040555,\n",
-       " 'factorized_top_k/top_50_categorical_accuracy': 0.000699999975040555,\n",
-       " 'factorized_top_k/top_100_categorical_accuracy': 0.000699999975040555,\n",
-       " 'loss': 29627.015625,\n",
+       "{'factorized_top_k/top_1_categorical_accuracy': 0.0005000000237487257,\n",
+       " 'factorized_top_k/top_5_categorical_accuracy': 0.0005000000237487257,\n",
+       " 'factorized_top_k/top_10_categorical_accuracy': 0.0005000000237487257,\n",
+       " 'factorized_top_k/top_50_categorical_accuracy': 0.0005000000237487257,\n",
+       " 'factorized_top_k/top_100_categorical_accuracy': 0.0005000000237487257,\n",
+       " 'loss': 15201.9599609375,\n",
        " 'regularization_loss': 0,\n",
-       " 'total_loss': 29627.015625}"
+       " 'total_loss': 15201.9599609375}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.evaluate(test.batch(8192), return_dict=True)"
+    "model.evaluate(cachedTest, return_dict=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Approximate Prediction"
+    "### Retrieving Top-K Candidates"
    ]
   },
   {
@@ -379,10 +386,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brute_force = tfrs.layers.factorized_top_k.BruteForce(model.user_model)\n",
-    "brute_force.index_from_dataset(\n",
-    "    toolsProcessed.batch(128).map(lambda title: (title, model.movie_model(title)))\n",
+    "# Dummy values created to simulate larger dataset\n",
+    "toolsWithDummy = tf.data.Dataset.concatenate(\n",
+    "    product.batch(4096),\n",
+    "    product.batch(4096).repeat(1_000).map(lambda x: tf.zeros_like(x))\n",
+    ")\n",
+    "\n",
+    "toolsWithDummyEmb = tf.data.Dataset.concatenate(\n",
+    "    product.batch(4096).map(model.product_model),\n",
+    "    product.batch(4096).repeat(1_000)\n",
+    "      .map(lambda x: model.product_model(x))\n",
+    "      .map(lambda x: x * tf.random.uniform(tf.shape(x)))\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow_recommenders.layers.factorized_top_k.BruteForce at 0x1d54de597f0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brute_force = tfrs.layers.factorized_top_k.BruteForce(model.customer_model)\n",
+    "brute_force.index_from_dataset(\n",
+    "    product.batch(128).map(lambda prod: (prod, model.product_model(prod)))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top recommendations: [b'SE JT6218 5-Piece Watch Band Link Pin Tool Set'\n",
+      " b'SE JT6218 5-Piece Watch Band Link Pin Tool Set'\n",
+      " b'SE JT6218 5-Piece Watch Band Link Pin Tool Set']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get predictions for user 42.\n",
+    "_, titles = brute_force(np.array([\"8839363\"]), k=3)\n",
+    "\n",
+    "print(f\"Top recommendations: {titles[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating the Approximation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tfrs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2376/4101388390.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Override the existing streaming candidate source.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m model.task.factorized_metrics = tfrs.metrics.FactorizedTopK(\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mcandidates\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtoolsWithDummyEmb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tfrs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Override the existing streaming candidate source.\n",
+    "model.task.factorized_metrics = tfrs.metrics.FactorizedTopK(\n",
+    "    candidates=toolsWithDummyEmb\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to recompile the model for the changes to take effect.\n",
+    "model.compile()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "%time baseline_result = model.evaluate(test.batch(8192), return_dict=True, verbose=False)\n"
    ]
   },
   {
@@ -467,8 +578,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25568/1644721066.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m.10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.04\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.05\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.01\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mrec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecall_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mprec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecision_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tensorflow\\python\\ops\\metrics_impl.py\u001b[0m in \u001b[0;36mrecall_at_k\u001b[1;34m(labels, predictions, k, class_id, weights, metrics_collections, updates_collections, name)\u001b[0m\n\u001b[0;32m   2653\u001b[0m   \"\"\"\n\u001b[0;32m   2654\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecuting_eagerly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2655\u001b[1;33m     raise RuntimeError('tf.metrics.recall_at_k is not '\n\u001b[0m\u001b[0;32m   2656\u001b[0m                        'supported when eager execution is enabled.')\n\u001b[0;32m   2657\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1020/1559968694.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpredictions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m.10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.04\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.05\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m.01\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mrec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecall_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mprec_at_k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecision_at_k\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tensorflow\\python\\ops\\metrics_impl.py\u001b[0m in \u001b[0;36mrecall_at_k\u001b[1;34m(labels, predictions, k, class_id, weights, metrics_collections, updates_collections, name)\u001b[0m\n\u001b[0;32m   2734\u001b[0m   \"\"\"\n\u001b[0;32m   2735\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecuting_eagerly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2736\u001b[1;33m     raise RuntimeError('tf.metrics.recall_at_k is not '\n\u001b[0m\u001b[0;32m   2737\u001b[0m                        'supported when eager execution is enabled.')\n\u001b[0;32m   2738\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mRuntimeError\u001b[0m: tf.metrics.recall_at_k is not supported when eager execution is enabled."
      ]
     }
